# spgrass

pkg/GRASS/: INDEX  LICENCE  README  configure  configure.ac
pkg/GRASS/R/: contour.G.R  east.R  gmeta.R  kde2d.G.R  list.grass.R  mapsets.R  north.R  obsno.R  plot.grassmeta.R  rast.get.R  rast.put.R  reverse.R  sites.get.R  sites.put.R  summary.grassmeta.R  trmat.G.R  zzz.R
pkg/GRASS/data/: pcbs.txt  utm.maas.rda
pkg/GRASS/inst/: LOG  README
pkg/GRASS/inst/old_files/: interp.new.G.R  interp.new.G.Rd  krige.G.R  krige.G.Rd
pkg/GRASS/man/: GRASS.connect.Rd  contour.G.Rd  get.mapsets.Rd  gmeta.Rd  kde2d.G.Rd  list.grass.Rd  pcbs.Rd  plot.grassmeta.Rd  rast.get.Rd  rast.put.Rd  sites.get.Rd  sites.put.Rd  summary.grassmeta.Rd  trmat.G.Rd  utm.maas.Rd
pkg/GRASS/src/: Makevars  Makevars.in  Makevars.win  R_G_init.c  cell_stats.c  closecell.c  color_rule.c  date.c  env.c  error.c  find_file.c  flate.c  get_row.c  get_window.c  getl.c  gisinit.c  gmeta.access.c  gmeta.c  history.c  key_value3.c  mapset.c  mapset_msc.c  mapset_nme.c  null_val.c  open.c  opencell.c  put_row.c  rasteri.c  rastget.c  rastput.c  reclass.c  remove.c  sites.c  sitesget.c  sitesput.c  store.c  window_map.c
pkg/GRASS/src/include/: config.h  gis.h  gisdefs.h  grassR.h  site.h  version.h
pkg/GRASS/src/include/win/: zconf.h
pkg/rgrass7/: ChangeLog  DESCRIPTION  NAMESPACE
pkg/rgrass7/R/: bin_link.R  vect_link.R  xml1.R
pkg/rgrass7/inst/: ChangeLog
pkg/rgrass7/man/: execGRASS.Rd  gmeta.Rd  initGRASS.Rd  readRAST.Rd  readVECT.Rd  rgrass.Rd
pkg/spgrass/: DESCRIPTION
pkg/spgrass/R/: AAA.R  bin_link.R  initGRASS.R  spgrass.R  vect_link.R  xml1.R
pkg/spgrass/inst/: CITATION
pkg/spgrass/man/: readRAST.Rd  (+4 more)
pkg/spgrass6/: ChangeLog  DESCRIPTION  NAMESPACE
pkg/spgrass7/: DESCRIPTION
(+18 files in other folders)
